--- a/web/themes/custom/themekit/sass/regions/_footer.scss
+++ b/web/themes/custom/themekit/sass/regions/_footer.scss
@@ -4,9 +4,9 @@
 
 .region-footer {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: column wrap;
   flex-basis: auto;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   max-width: $global-width;
   margin: 0 auto;
@@ -15,6 +15,14 @@
   z-index: z(front);
   position: relative;
   min-height: 122px;
+  padding: 0 1rem;
+  @include breakpoint(medium) {
+    flex-flow: row wrap;
+    justify-content: space-between;
+  }
+  @include breakpoint(large) {
+    padding: 0;
+  }
   &:before {
     content: '';
     position: absolute;
@@ -27,20 +35,27 @@
   }
   h2 {
     font-size: $font-size-small;
+    height: 1rem;
+    margin-bottom: 0;
   }
   .menu--follow-us {
     display: flex;
     flex-flow: row nowrap;
+    align-items: center;
     flex-basis: auto;
+  }
+  ul.menu {
+    margin-bottom: 0;
   }
   .menu-item {
     line-height: 1;
     a {
       position: relative;
+      width: 1rem;
+      height: 1rem;
       color: transparent;
       display: inline-block;
       pointer-events: none;
-      transition: .4s ease transform;
       &:after {
         content: '';
         position: absolute;
@@ -52,10 +67,13 @@
         background-repeat: no-repeat;
         background-size: contain;
         pointer-events: initial;
+        transition: .4s ease transform;
       }
       &:hover,
       &:focus {
-        transform: translateY(-5px);
+        &:after {
+          transform: translateY(-5px);
+        }
       }
     }
   }
